# DockerPilot

./: .gitattributes  .gitignore  BLUE_GREEN_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURE_COMPARISON.md  HEALTH_CHECKS_CONFIG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LITE_FEATURES_ADDED.md  MANIFEST.in  MULTI_CONTAINER_USAGE.md  PRE_RELEASE_CHECKLIST.md  QUICK_DEPLOY_GUIDE.md  README.md  README.txt  dockerpilot.py  install.bat  install.ps1  install.sh  install.sh.venv.patch  install_everything.sh  prepare_release.sh  pyproject.toml  requirements.txt  searcher.py  setup.py  setup_passwordless_sudo.sh
.github/workflows/: ci.yml
DockerPilotExtras/: .gitignore  LICENSE  QUICKSTART.md  README.md  check_web_setup.py  loader.py  requirements.txt  run_dev.py  setup_extras.sh
DockerPilotExtras/backend/: api.py  app.py  config.py  preflight.py  storage.py
DockerPilotExtras/examples/: deployment-example.yml  gitlab-ci-example.yml  jenkinsfile-example
DockerPilotExtras/frontend/: index.html  package-lock.json  package.json  vite.config.js
DockerPilotExtras/scripts/: migrate_deployments.py
DockerPilotExtras/utils/: __init__.py  pipeline_generator.py  prepare_dev_configs.py  (+2 more)
docs/: multi-container.md  quick-deploy.md
scripts/: prepare_release.ps1
tests/: test_build_fallback.py  test_cli_handlers.py  test_cli_parser.py  test_cli_tui.py  test_container_manager.py  test_extras_api_preflight.py  test_extras_api_status.py  test_extras_pipeline_generator.py  test_extras_preflight.py  test_extras_setup_checks.py  test_main.py  test_project_metadata.py
(+73 files in other folders)
