[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockerpilot"
version = "0.1.0"
description = "Docker container management tool with advanced deployment capabilities"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name="dozey", email="dozeynwct@hotmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "docker>=6.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
]
optional-dependencies = {
    git = ["GitPython>=3.1.0"],
    test = ["pytest>=7.0.0", "pytest-cov>=4.0.0"],
}

[project.scripts]
dockerpilot = "dockerpilot.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
